editor-components/e-commerce/e-commerce1/e-commerce1.module.scss
/* ... */
@container (max-width: #{$composer-tablet-width}) {
    .container {
        .max-content {
            .section {
                flex-direction: column;
                gap: var(--composer-gap-md);
                .left {
                    .left-images {
                        justify-content: flex-start;
                        flex-direction: column;
                        gap: var(--composer-gap-md);
                    }
                    .right-image {
                        width: 100% !important;

                        .carousel {
                            > div {
                                > div {
                                    > div {
                                        height: 100% !important;
                                    }
                                }
                            }
                        }
                        .product-img {
                            width: 100% !important;
                        }
                    }
                }
                .right {
                    .title {
                        margin: 0 !important;
                    }
                    .review-area {
                        margin-top: var(--composer-gap-md) !important;
                    }
                }
            }
            .image-popup{
                .popup-content{
                    width: 70%;
                    height: 80%;                  
                }
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            .section {
                flex-direction: column;
                .left {
                    flex-direction: column-reverse;
                    max-height: fit-content;
                    .left-images {
                        flex-direction: row;
                        flex-wrap: wrap;
                        justify-content: flex-start;
                        gap: var(--composer-gap-sm);
                        width: 100%;
                        &.without-right{
                            width: 100%;
                        }
                        .img-container {
                            width: calc(50% - (var(--composer-gap-sm) / 2));
                            height: 50%;
                            flex: auto;
                            .img {
                                width: 100%;
                            }
                        }
                    }
                    .right-image {
                        .product-img {
                            width: 100%;
                            height: auto !important;
                        }
                    }
                }
                .right {
                    .vertical {
                        .inputs {
                            flex-direction: column;
                            width: 100%;
                            gap: var(--composer-gap-sm);
                            .button, .count-input {
                                width: 100% !important;
                                height: var(--composer-gap-xl) !important;
                            }

                            .count-input {
                                border-right: 1px solid var(--composer-tertiary-color);
                            }
                        }
                    }
                }
            }
        }
    }
}

